animation and spacing fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -266,3 +266,9 @@ body {
     background-position: 0 50%;
   }
 }
+
+.text-clip-all {
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
